--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --columns: 4;
+  --rows: 4;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,15 +10,19 @@
 }
 
 .table-container {
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .table {
+  max-width: calc(min(80vw, 80vh));
+  max-height: calc(min(80vw, 80vh));
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
   background-color: #bcaba1;
   border-radius: 5px;
@@ -21,8 +30,8 @@
 }
 
 .cell {
-  width: 90px;
-  height: 90px;
+  height: calc((min(80vw, 80vh) - 10px) / max(var(--columns), var(--rows)) - 10px);
+  width: calc((min(80vw, 80vh) - 10px) / max(var(--columns), var(--rows)) - 10px);
   margin: 5px;
   border-radius: 5px;
   background-color: #d6cdc4;
@@ -32,12 +41,28 @@
 }
 
 .block {
-  width: 90px;
-  height: 90px;
+  width: 100%;
+  height: 100%;
   border-radius: 5px;
-  font-size: 25px;
+  font-size: calc(min((((min(80vw, 80vh) - 10px) / max(var(--columns), var(--rows)) - 10px) / 2), 35px));
   font-weight: bold;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.tableSize-input-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.tableSize-input {
+  width: 100%;
+  border-radius: 5px;
+  background-color: #d6cdc4;
+  border: 2px solid #bcaba1;
+  padding: 4px;
+  width: 50px;
+  text-align: center;
 }
