--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,14 @@
   align-items: center;
 }
 
+.settings-container {
+  width: calc(min(80vw, 80vh));
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
 .tableSize-input-container {
   display: flex;
   justify-content: space-between;
@@ -65,4 +73,29 @@
   padding: 4px;
   width: 50px;
   text-align: center;
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
+.button-default {
+  width: 50px;
+  height: 50px;
+  border-radius: 15px;
+  background-color: #d6cdc4;
+  border: 5px solid #bcaba1;
+  padding: 4px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-default img {
+  width: 35px;
+  height: 35px;
 }
