--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,13 @@
   margin-bottom: 10px;
 }
 
+.tableSize-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 5px;
+}
+
 .tableSize-input-container {
   display: flex;
   justify-content: space-between;
@@ -79,12 +86,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 10px;
+  gap: 11px;
 }
 
 .button-default {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   border-radius: 15px;
   background-color: #d6cdc4;
   border: 5px solid #bcaba1;
